@@ -13,6 +13,9 @@
   <include package=".content" />
   <include package=".contentrules" />
 
+  <subscriber for=".interfaces.IPrenotazione zope.lifecycleevent.IObjectModifiedEvent"
+              handler=".event.booking_created" />
+
   <!-- Register the installation GenericSetup extension profile -->
   <genericsetup:registerProfile
       name="default"
