@@ -54,6 +54,38 @@ ${url}
   </actions>
  </rule>
 
+ <!-- unluckily workflow content rules are not triggered with automatic transitions -->
+ <rule name="booking-created" title="Send email when a booking is created"
+    description="Viene inviata una mail al responsabile per avvertire della creazione di una prenotazione"
+	enabled="True"
+    event="Products.CMFCore.interfaces.IActionSucceededEvent"
+    stop-after="False">
+  <conditions>
+   <condition type="plone.conditions.PortalType">
+    <property name="check_types">
+     <element>Prenotazione</element>
+    </property>
+   </condition>
+   <condition type="plone.conditions.WorkflowTransition">
+    <property name="wf_transitions">
+     <element>submit</element>
+    </property>
+   </condition>
+  </conditions>
+  <actions>
+   <action type="plone.actions.MailFromField">
+    <property name="subject">Nuova prenotazione</property>
+	<property name="source"></property>
+	<property name="fieldName">email_responsabile</property>
+	<property name="target">object</property>
+	<property name="message">E' stata sottoposta una nuova prenotazione: "${title}":
+${url}
+	</property>
+   </action>
+  </actions>
+ </rule>
+
  <assignment name="booking-accepted" bubbles="True" enabled="True" location=""/>
  <assignment name="booking-moved" bubbles="True" enabled="True" location=""/>
+ <!--assignment name="booking-created" bubbles="True" enabled="True" location=""/-->
 </contentrules>
