@@ -1,85 +1,47 @@
 <?xml version="1.0"?>
 <dc-workflow workflow_id="prenotazioni_workflow"
-             title="Prenotazioni Workflow" description=""
+             title="Prenotazioni Workflow"
+             description="Workflow for Prenotazione content type"
              state_variable="review_state"
              initial_state="private">
  <permission>Access contents information</permission>
- <permission>Change portal events</permission>
- <permission>List folder contents</permission>
  <permission>Modify portal content</permission>
  <permission>View</permission>
  <state state_id="pending" title="In attesa">
-  <description>Waiting to be reviewed, not editable by the owner.
+  <description>Waiting to be reviewed, not editable by the owner and not visible
 </description>
   <exit-transition transition_id="publish"/>
   <permission-map name="Access contents information"
                   acquired="False">
-   <permission-role>Contributor</permission-role>
+   <permission-role>Owner</permission-role>
    <permission-role>Editor</permission-role>
    <permission-role>Manager</permission-role>
    <permission-role>Reader</permission-role>
    <permission-role>Reviewer</permission-role>
-   <permission-role>Site Administrator</permission-role>
-  </permission-map>
-  <permission-map name="Change portal events"
-                  acquired="False">
-   <permission-role>Manager</permission-role>
-   <permission-role>Reviewer</permission-role>
-   <permission-role>Site Administrator</permission-role>
-  </permission-map>
-  <permission-map name="List folder contents"
-                  acquired="False">
-   <permission-role>Contributor</permission-role>
-   <permission-role>Editor</permission-role>
-   <permission-role>Manager</permission-role>
-   <permission-role>Reader</permission-role>
-   <permission-role>Reviewer</permission-role>
-   <permission-role>Site Administrator</permission-role>
   </permission-map>
   <permission-map name="Modify portal content"
                   acquired="False">
    <permission-role>Manager</permission-role>
    <permission-role>Reviewer</permission-role>
-   <permission-role>Site Administrator</permission-role>
   </permission-map>
   <permission-map name="View" acquired="False">
-   <permission-role>Contributor</permission-role>
+   <permission-role>Owner</permission-role>
    <permission-role>Editor</permission-role>
    <permission-role>Manager</permission-role>
    <permission-role>Reader</permission-role>
    <permission-role>Reviewer</permission-role>
-   <permission-role>Site Administrator</permission-role>
   </permission-map>
  </state>
  <state state_id="private" title="Private">
-  <description>Can only be seen and edited by the owner.
-</description>
+  <description>Fake initial state, immediately changed</description>
   <exit-transition transition_id="submit"/>
   <permission-map name="Access contents information"
                   acquired="False">
    <permission-role>Anonymous</permission-role>
-   <permission-role>Contributor</permission-role>
    <permission-role>Editor</permission-role>
    <permission-role>Manager</permission-role>
    <permission-role>Owner</permission-role>
    <permission-role>Reader</permission-role>
-   <permission-role>Site Administrator</permission-role>
-  </permission-map>
-  <permission-map name="Change portal events"
-                  acquired="False">
-   <permission-role>Editor</permission-role>
-   <permission-role>Manager</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>Site Administrator</permission-role>
-  </permission-map>
-  <permission-map name="List folder contents"
-                  acquired="False">
-   <permission-role>Contributor</permission-role>
-   <permission-role>Editor</permission-role>
-   <permission-role>Manager</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>Reader</permission-role>
-   <permission-role>Site Administrator</permission-role>
   </permission-map>
   <permission-map name="Modify portal content"
                   acquired="False">
@@ -87,63 +49,40 @@
    <permission-role>Editor</permission-role>
    <permission-role>Manager</permission-role>
    <permission-role>Owner</permission-role>
-   <permission-role>Site Administrator</permission-role>
   </permission-map>
   <permission-map name="View" acquired="False">
    <permission-role>Anonymous</permission-role>
-   <permission-role>Contributor</permission-role>
    <permission-role>Editor</permission-role>
    <permission-role>Manager</permission-role>
    <permission-role>Owner</permission-role>
    <permission-role>Reader</permission-role>
-   <permission-role>Site Administrator</permission-role>
   </permission-map>
  </state>
  <state state_id="published" title="Confermato">
   <permission-map name="Access contents information"
                   acquired="False">
-   <permission-role>Contributor</permission-role>
+   <permission-role>Owner</permission-role>
    <permission-role>Editor</permission-role>
    <permission-role>Manager</permission-role>
    <permission-role>Reader</permission-role>
    <permission-role>Reviewer</permission-role>
-   <permission-role>Site Administrator</permission-role>
-  </permission-map>
-  <permission-map name="Change portal events"
-                  acquired="False">
-   <permission-role>Manager</permission-role>
-   <permission-role>Reviewer</permission-role>
-   <permission-role>Site Administrator</permission-role>
-  </permission-map>
-  <permission-map name="List folder contents"
-                  acquired="False">
-   <permission-role>Contributor</permission-role>
-   <permission-role>Editor</permission-role>
-   <permission-role>Manager</permission-role>
-   <permission-role>Reader</permission-role>
-   <permission-role>Reviewer</permission-role>
-   <permission-role>Site Administrator</permission-role>
   </permission-map>
   <permission-map name="Modify portal content"
                   acquired="False">
    <permission-role>Manager</permission-role>
    <permission-role>Reviewer</permission-role>
-   <permission-role>Site Administrator</permission-role>
   </permission-map>
   <permission-map name="View" acquired="False">
-   <permission-role>Contributor</permission-role>
+   <permission-role>Owner</permission-role>
    <permission-role>Editor</permission-role>
    <permission-role>Manager</permission-role>
    <permission-role>Reader</permission-role>
    <permission-role>Reviewer</permission-role>
-   <permission-role>Site Administrator</permission-role>
   </permission-map>
  </state>
  <transition transition_id="publish" title="Conferma"
              new_state="published" trigger="USER"
              before_script="" after_script="">
-  <description>
-</description>
   <action url="%(content_url)s/content_status_modify?workflow_action=publish"
           category="workflow">Conferma</action>
   <guard>
@@ -152,10 +91,11 @@
  </transition>
  <transition transition_id="submit"
              title="Transazione automatica di richiesta conferma"
-             new_state="pending" trigger="AUTOMATIC"
+             new_state="pending" trigger="USER"
              before_script="" after_script="">
   
   <guard>
+   <guard-permission>View</guard-permission>
   </guard>
  </transition>
  <worklist worklist_id="reviewer_queue" title="">
